prusti-tests/tests/verify/ui/counterexamples/loop.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/loop.rs:5:11
   |
5  | #[ensures(result != 16)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/loop.rs:6:1
   |
6  | / fn spurious() -> i32 {
7  | |     let mut x = 10;
8  | |     let mut y = 1;
9  | |     while (x > 0) {
...  |
16 | |     y
17 | | }
   | |_^
note: counterexample for "x"
  final value:   0
  --> $DIR/loop.rs:7:9
   |
7  |     let mut x = 10;
   |         ^^^^^
note: counterexample for "y"
  final value:   16
  --> $DIR/loop.rs:8:9
   |
8  |     let mut y = 1;
   |         ^^^^^
note: counterexample for result
  final value:   16
  --> $DIR/loop.rs:6:18
   |
6  | fn spurious() -> i32 {
   |                  ^^^

error: aborting due to previous error

